--- a/ecommerce/loja/templates/base.html
+++ b/ecommerce/loja/templates/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Smart</title>
 </head>
 <body>
-    
-    Alvalade
-
+    <nav>Barra de navegação</nav>
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
