--- a/ecommerce/loja/templates/homepage.html
+++ b/ecommerce/loja/templates/homepage.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo Smart</title>
-</head>
-<body>
-    
-    Minha página está no ar
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block body %}
+
+<h3>Minha página está no ar</h3>
+
+{% endblock %}
