--- a/ecommerce/loja/templates/homepage.html
+++ b/ecommerce/loja/templates/homepage.html
@@ -4,5 +4,9 @@
 {% block body %}
 
 <h3>Minha página está no ar</h3>
+<h2>Teste do github no linux</h2>
+<h2>Teste do github no linux</h2>
+<h1>teste auto save</h1>
+
 
 {% endblock %}
