--- a/ecommerce/loja/templates/loja.html
+++ b/ecommerce/loja/templates/loja.html
@@ -7,7 +7,10 @@
 
 {% for produto in produtos %}
 
-<img src="{{ produto.imagem.url }}" width="300" height="300">
+<a href="{% url 'ver_produto' produto.id %}">
+    <img src="{{ produto.imagem.url }}" width="300" height="300">
+</a>
+
 <p>Produto: {{produto.nome}}</p>
 <p>Preço: {{produto.preco}}</p>
 
