circulos com as cores

--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -5,10 +5,23 @@
 
 <h3>{{ produto.nome }}</h3>
 
+{% if tem_estoque %}
+
 <img src="{{ produto.imagem.url }}" width="300" height="300">
 <p>Produto: {{produto.nome}}</p>
 <p>Preço: {{produto.preco}}</p>
 
+{% for cor in cores %}
+{{ cor.nome }}
+<i class="fa-solid fa-circle" style="color: {{ cor.codigo }};"></i> 
+{% endfor %}
+
 <button>Adicionar ao Carrinho</button>
+
+{% else %}
+
+<p>Produto sem estoque</p>
+
+{% endif %} 
 
 {% endblock %}
