--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -11,12 +11,34 @@
 <p>Produto: {{produto.nome}}</p>
 <p>Preço: {{produto.preco}}</p>
 
+{% if nome_cor_selecionada %}
+
+Cor: {{ nome_cor_selecionada }}
+
+{% endif %}
+
 {% for cor in cores %}
-{{ cor.nome }}
-<i class="fa-solid fa-circle" style="color: {{ cor.codigo }};"></i> 
+<a href="{% url 'ver_produto' produto.id cor.id %}">
+    <i class="fa-solid fa-circle" style="color: {{ cor.codigo }};"></i> 
+</a>
 {% endfor %}
 
-<button>Adicionar ao Carrinho</button>
+{% if tamanhos%}
+<form method="post" action="{% url 'adicionar_carrinho' produto.id %}">
+    
+    {% csrf_token %}
+    <p>Selecione o tamanho:</p>
+
+    {% for tamanho in tamanhos %}
+
+    <input type="radio" name="tamanho" value="{{ tamanho }}">
+    <label for="{{ tamanho }}">{{ tamanho }}</label>
+
+    {% endfor %}
+
+    <button type="submit">Adicionar ao Carrinho</button>
+</form>
+{% endif %}
 
 {% else %}
 
