--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -11,9 +11,9 @@
 <p>Produto: {{produto.nome}}</p>
 <p>Preço: {{produto.preco}}</p>
 
-{% if nome_cor_selecionada %}
+{% if cor_selecionada %}
 
-Cor: {{ nome_cor_selecionada }}
+Cor: {{ cor_selecionada.nome }}
 
 {% endif %}
 
@@ -31,6 +31,8 @@ Cor: {{ nome_cor_selecionada }}
     <input type="radio" name="tamanho" value="{{ tamanho }}">
     <label for="{{ tamanho }}">{{ tamanho }}</label>
     {% endfor %}
+
+    <input type="hidden" name="cor" value="{{ cor_selecionada.id }}">
     <button type="submit">Adicionar ao Carrinho</button>
 </form>
 {% endif %}
