--- a/ecommerce/loja/templates/checkout.html
+++ b/ecommerce/loja/templates/checkout.html
@@ -4,5 +4,39 @@
 {% block body %}
 
 <h3>Checkout</h3>
+<a href="{% url 'carrinho' %}">Voltar para o carrinho</a>
+
+
+<h4>Número do Pedido: {{ pedido.id }}</h4>
+<p>Preço total do pedido: {{ pedido.preco_total }} €</p>
+<p>Quantidade total de produtos: {{ pedido.quantidade_total }}</p>
+
+
+<form method="POST" action="">
+
+    {% csrf_token %}
+
+    <h3>Selecione o endereço de entrega:</h3>
+    <a href="{% url 'adicionar_endereco' %}">Adicionar endereco de entrega</a>
+    <br>
+    
+    {% for endereco in enderecos %}
+        <input type="radio" name="endereco value="{{ endereco.id }}">
+        <label for="{{ endereco.id }}">{{ endereco.rua }}, N° {{ endereco.numero }}, {{ endereco.complemento }} - {{ endereco.estado }}, {{ endereco.cidade}} - {{ endereco.cep }}</label>
+        <br>
+    {% endfor %}
+    
+    {% if not request.user.is_authenticated %}
+        <hr>
+        <h4>Preencha seu email para finalizar o pedido</h4>
+        <input type="email" name="email" placeholder="email">
+    {% endif %}
+    <hr>
+    <input type="hidden" value="{{ pedido.preco_total }}" name="total">
+    <button type="submit">Finalziar o pedido - {{ pedido.preco_total }} €</button>
+
+</form>
+
+
 
 {% endblock %}
