--- a/ecommerce/loja/templates/base.html
+++ b/ecommerce/loja/templates/base.html
@@ -13,6 +13,8 @@
     {% include 'navbar.html' %}
     {% block body %}
     {% endblock %}
+
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
 
