--- a/ecommerce/loja/templates/navbar.html
+++ b/ecommerce/loja/templates/navbar.html
@@ -3,11 +3,6 @@
 <nav>
     <a href="{% url 'homepage' %}">Grupo Smart</a>
     <a href="{% url 'loja' %}">Loja</a>
-    <a href="{% url 'login' %}">Login</a>
-    <a href="{% url 'minha_conta' %}">Minha Conta</a>
-    <a href="{% url 'carrinho' %}">Carrinho</a> 
-    <img src="{% static 'images/carrinho.png' %}" width=30 height=30>
-    {{ quantidade_produtos_carrinho }}
 
     <div style="display: flex;">
         {% for categoria in categorias_navegacao %}
@@ -24,5 +19,16 @@
         {% endfor %}
 
     </div>
+
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'minha_conta' %}">Minha Conta</a>
+    {% else %}
+        <a href="{% url 'fazer_login' %}">Login</a>
+    {% endif %}
+
+    <a href="{% url 'carrinho' %}">Carrinho</a> 
+    <img src="{% static 'images/carrinho.png' %}" width=30 height=30>
+    {{ quantidade_produtos_carrinho }}
+
 
 </nav>
