--- a/ecommerce/loja/templates/usuario/minha_conta.html
+++ b/ecommerce/loja/templates/usuario/minha_conta.html
@@ -4,6 +4,7 @@
 {% block body %}
 
 <h3>Minha conta</h3>
+<a href="{% url 'meus_pedidos' %}">Meus pedidos</a>
 
 <a href="{% url 'fazer_logout' %}">Sair da conta</a>
 
