--- a/ecommerce/loja/templates/usuario/minha_conta.html
+++ b/ecommerce/loja/templates/usuario/minha_conta.html
@@ -8,4 +8,24 @@
 
 <a href="{% url 'fazer_logout' %}">Sair da conta</a>
 
+<h3>Meus dados</h3>
+<form method="POST" action="{% url 'minha_conta'%}">
+    <input type="text" name="nome" placeholder="Nome Completo" {% if request.user.cliente.nome %}value="{{ request.user.cliente.nome }}"{% endif %}>
+    <input type="email" name="email" placeholder="E-mail" value="{{ request.user.email }}">
+    <input type="number" name="telefone" placeholder="Telefone" value="{{ request.user.cliente.telefone }}">
+    <button type="submit">Salvar</button>
+
+</form>
+
+<hr>
+
+<h3>Alterar Senha</h3>
+<form method="POST" action="{% url 'minha_conta'%}">
+    <input type="password" name="senha_atual" placeholder="Senha Atual">
+    <input type="password" name="nova_senha" placeholder="Nova Senha">
+    <input type="password" name="nova_senha_confirmacao" placeholder="Confirmação Nova Senha">
+    <button type="submit">Editar Senha</button>
+</form>
+
+
 {% endblock %}
