--- a/ecommerce/loja/templates/usuario/minha_conta.html
+++ b/ecommerce/loja/templates/usuario/minha_conta.html
@@ -8,8 +8,30 @@
 
 <a href="{% url 'fazer_logout' %}">Sair da conta</a>
 
+
+{% if alterado %}
+<p>Alterações salvas com sucesso</p>
+{% endif %}
+
+{% if erro == "senha_incorreta" %}
+<p>Sua senha está incorreta</p>
+{% endif %}
+
+{% if erro == "senhas_diferentes" %}
+<p>Nova senha e confirmação da nova senha não estão iguais</p>
+{% endif %}
+
+{% if erro == "email_existente" %}
+<p>Já existe um usuário com esse e-mail</p>
+{% endif %}
+
+{% if erro == "formulario_invalido" %}
+<p>Formulário Inválido, tente novamente</p>
+{% endif %}
+
 <h3>Meus dados</h3>
 <form method="POST" action="{% url 'minha_conta'%}">
+    {% csrf_token %}
     <input type="text" name="nome" placeholder="Nome Completo" {% if request.user.cliente.nome %}value="{{ request.user.cliente.nome }}"{% endif %}>
     <input type="email" name="email" placeholder="E-mail" value="{{ request.user.email }}">
     <input type="number" name="telefone" placeholder="Telefone" value="{{ request.user.cliente.telefone }}">
@@ -21,6 +43,7 @@
 
 <h3>Alterar Senha</h3>
 <form method="POST" action="{% url 'minha_conta'%}">
+    {% csrf_token %}
     <input type="password" name="senha_atual" placeholder="Senha Atual">
     <input type="password" name="nova_senha" placeholder="Nova Senha">
     <input type="password" name="nova_senha_confirmacao" placeholder="Confirmação Nova Senha">
