--- a/ecommerce/loja/templates/checkout.html
+++ b/ecommerce/loja/templates/checkout.html
@@ -12,7 +12,7 @@
 <p>Quantidade total de produtos: {{ pedido.quantidade_total }}</p>
 
 
-<form method="POST" action="">
+<form method="POST" action="{% url 'finalizar_pedido' pedido.id %}">
 
     {% csrf_token %}
 
