--- a/ecommerce/loja/templates/rodape.html
+++ b/ecommerce/loja/templates/rodape.html
@@ -3,6 +3,8 @@
     <section class="rodape__secao-formulario">
       
       <div class="rodape__container">
+
+        <!--Limpo- falta os links para as paginas-->
         <!--Informações Sobre a Reserva, Vem Pra Reserva, Minha Conta, Suporte-->
         <div class="rodape__informacoes">
 
@@ -124,8 +126,6 @@
     <section class="rodape__secao-empresa">
       <p>
         TABELALIMITE UNIPESSOAL LDA | NIPC: 513117539 | PRAÇA DE ALVALADE C C ALVALADE QUIOSQUE 2 N 6B LISBOA, 1700-036 LISBOA, PORTUGAL | SITE CONSTRUIDO POR JONATHAN VENANCIO
-       
       </p>
-    
     </section>
 </footer>
