--- a/ecommerce/loja/templates/rodape.html
+++ b/ecommerce/loja/templates/rodape.html
@@ -16,7 +16,7 @@
             <ul class="rodape__links">
               <li><a href="#">Smart Cartridge</a></li>
               <li><a href="#">Cultura</a></li>
-              <li><a hhref="#">Parceiros</a></li>
+              <li><a href="#">Parceiros</a></li>
             </ul>
           </div>
           <!--Sobre nós-->
