--- a/ecommerce/loja/templates/homepage.html
+++ b/ecommerce/loja/templates/homepage.html
@@ -3,13 +3,24 @@
 
 {% block body %}
 
-<h3>HomePage</h3>
 
-{% for banner in banners %}
+<main class="principal">
 
-<a href="{% url 'loja' %}{{ banner.link_destino }}">
-    <img src="{{ banner.imagem.url }}">
-</a>
-{% endfor %}
+    <section class="banner-individual">
+        <a href="{% url 'loja' %}">
+          <img src="{% static 'images/gif1.gif' %}" alt="Banner Gif Desktop"/>
+          <img src="{% static 'images/gif2.gif' %}" alt="Banner Gif Mobile"/>
+        </a>
+      </section>
+
+    <section class="banner-grid">
+    {% for banner in banners %}
+      <a href="{% url 'loja' %}{{ banner.link_destino }}">
+        <img src="{{ banner.imagem.url }}" alt="{{ banner.link_destino }}"/>
+      </a>
+    {% endfor %}
+    </section>
+
+  </main>
 
 {% endblock %}
