--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -43,4 +43,6 @@ Cor: {{ cor_selecionada.nome }}
 
 {% endif %} 
 
+<script type="text/javascript" src="{% static 'js/produto.js' %}"></script>
+
 {% endblock %}
