--- a/ecommerce/loja/templates/base.html
+++ b/ecommerce/loja/templates/base.html
@@ -26,10 +26,11 @@
     <script type="text/javascript" src="{% static 'js/checkout.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/loja.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/produto.js' %}"></script>
+    <!--<script type="text/javascript" src="{% static 'js/produto.js' %}"></script>-->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/slider.js' %}"></script>
 
 </body>
 </html>
 
+<!---->
