--- a/ecommerce/loja/templates/loja.html
+++ b/ecommerce/loja/templates/loja.html
@@ -65,7 +65,7 @@
 
       <div class="menu__expansivel">
         <div class="menu__expansivel-cabecalho menu__expansivel-cabecalho--aberto">
-          <p class="menu__subtitulo">Tipo</p>
+          <p class="menu__subtitulo">Marca</p>
         </div>
 
         <div class="menu__expansivel-conteudo">
