--- a/ecommerce/loja/templates/navbar.html
+++ b/ecommerce/loja/templates/navbar.html
@@ -28,10 +28,10 @@
               </a>
 
               <ul class="cabecalho__lista cabecalho__lista--tipo">
-                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}hp">HP</a></li>
-                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}epson">Epson</a></li>
-                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}brother">Brother</a></li>
-                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}canon">Canon</a></li>
+                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}tinteiros-hp">HP</a></li>
+                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}tinteiros-epson">Epson</a></li>
+                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}tinteiros-brother">Brother</a></li>
+                <li><a class="cabecalho__link cabecalho__link--tipo" href="{% url 'loja' %}tinteiros-canon">Canon</a></li>
               </ul>
             </div>
           </li>
