--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -43,6 +43,158 @@ Cor: {{ cor_selecionada.nome }}
 
 {% endif %} 
 
+
+<main class="principal principal--padding-b principal--gap">
+    <section class="s-produto">
+      <div class="s-produto__carrossel">
+        <div class="s-produto__carrossel-itens">
+
+          <div class="s-produto__carrossel-img">
+            <img src="{{ produto.imagem.url }}" alt="Imagem Carrossel 1"/>
+          </div>
+          <div class="s-produto__carrossel-img" style="overflow: hidden;">
+            <img src="{{ produto.imagem.url }}" alt="Imagem Carrossel 2" style="transform: scale(1.6);"/>
+          </div>
+
+        </div>
+
+        <div class="s-produto__carrossel-botoes">
+          <div class="s-produto__carrossel-botao s-produto__carrossel-botao--selecionado"></div>
+          <div class="s-produto__carrossel-botao"></div>
+          <div class="s-produto__carrossel-botao"></div>
+          <div class="s-produto__carrossel-botao"></div>
+          <div class="s-produto__carrossel-botao"></div>
+        </div>
+      </div>
+
+      <div class="s-produto__informacoes">
+        <div class="s-produto__breadcrumbs">
+          <span><a href="{% url 'loja' %}">Loja</a></span>
+          <span><a href="{% url 'loja' %}{{ produto.categoria.slug }}">Categoria</a></span>
+          <span><a href="{% url 'loja' %}{{ produto.categoria.slug }}-{{ produto.tipo.slug }}">Marca</a></span>
+          <span><p>{{ produto.nome }}</p></span>
+        </div>
+
+        <div class="s-produto__infos">
+          <h1 class="s-produto__titulo">{{ produto.nome }}</h1>
+
+          <p class="s-produto__preco">{{ produto.preco }} €</p>
+
+          <div class="s-produto__cor">
+            <p class="s-produto__cor-nome">Cor: <span>{{ cor_selecionada.nome }}</span></p>
+            <div class="s-produto__cores">
+              {% for cor in cores %}
+                <a href="{% url 'ver_produto' produto.id cor.id %}" class="s-produto__cores-item" style="background-color: {{ cor.codigo }}"></a>
+              {% endfor %}
+            </div>
+          </div>
+          {% if tamanhos%}
+            <form method="post" action="{% url 'adicionar_carrinho' produto.id %}">
+              {% csrf_token %}
+              <div class="s-produto__tamanho">
+
+                <div class="s-produto__tamanhos">
+                  {% for tamanho in tamanhos %}
+                  <div class="menu__tamanho">
+                    <div class="s-produto__tamanhos-item">{{ tamanho }}</div>
+                    <input class="menu__checkbox" type="radio" name="tamanho" value="{{ tamanho }}">
+                  </div>
+                  {% endfor %}
+                </div>
+
+              </div>
+
+              <input type="hidden" name="cor" value="{{ cor_selecionada.id }}">
+              <button class="s-produto__adicicionar">Adicionar ao carrinho</button>  
+            </form>
+          {% endif %}
+        </div>
+
+        <div class="s-produto__descricao">
+          <p class="s-produto__descricao-titulo">Descrição do produto</p>
+          <div class="s-produto__descricao-textos">
+            <p>
+              Básicos indispensáveis! A camiseta de algodão cropped é perfeita
+              para usar com calças e saias de cintura alta.
+            </p>
+            <p>
+              COMPOSIÇÃO <br />
+              96% Viscose 4% Elastano
+            </p>
+            <p>
+              CÓDIGO DO PRODUTO <br />
+              Ref: <span>0078397051</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="similares">
+      <h2 class="similares__titulo">
+        Gostou desse produto? Veja itens similares
+      </h2>
+
+      <div class="similares__container">
+        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
+          <div class="produto__imagem">
+            <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
+          </div>
+
+          <div class="produto__textos">
+            <p class="produto__titulo">Camiseta Silk Folhagem</p>
+            <div class="produto__preco">
+              <p class="produto__avista">R$ 349<sup>,00</sup></p>
+              <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
+          <div class="produto__imagem">
+            <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
+          </div>
+          
+          <div class="produto__textos">
+            <p class="produto__titulo">Camiseta Silk Folhagem</p>
+            <div class="produto__preco">
+              <p class="produto__avista">R$ 349<sup>,00</sup></p>
+              <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
+            <div class="produto__imagem">
+              <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
+            </div>
+            
+            <div class="produto__textos">
+              <p class="produto__titulo">Camiseta Silk Folhagem</p>
+              <div class="produto__preco">
+                <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
+            <div class="produto__imagem">
+              <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
+            </div>
+            
+            <div class="produto__textos">
+              <p class="produto__titulo">Camiseta Silk Folhagem</p>
+              <div class="produto__preco">
+                <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+              </div>
+            </div>
+          </a>
+      </div>
+    </section>
+  </main>
+
 <script type="text/javascript" src="{% static 'js/produto.js' %}"></script>
 
 {% endblock %}
