--- a/ecommerce/loja/templates/carrinho.html
+++ b/ecommerce/loja/templates/carrinho.html
@@ -80,7 +80,7 @@
             <p>{{ pedido.preco_total }} €</p>
             </div>
 
-            <a href="{% url 'checkout' %}" class="subtotal__botao">Finalizar compra</a>
+            <a href="{% url 'checkout' %}" class="subtotal__botao">Finalizar a compra</a>
         </div>
         </section>
     {% else %}
