--- a/ecommerce/loja/templates/interno/gerenciar_loja.html
+++ b/ecommerce/loja/templates/interno/gerenciar_loja.html
@@ -3,20 +3,45 @@
 
 {% block body %}
 
-<h3>Gerenciar Loja</h3>
 
-<p>Faturamento: {{ faturamento }}</p>
-<p>Produtos Vendidos: {{ qtde_produtos }}</p>
-<p>Total Pedidos: {{ qtde_pedidos }}</p>
+<main class="principal">
+    <section class="conta">
+    
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Principais Indicadores</p>
+        </div>
+        
+        <p>Faturamento: {{ faturamento }}</p>
+        <p>Produtos Vendidos: {{ qtde_produtos }}</p>
+        <p>Total Pedidos: {{ qtde_pedidos }}</p>
 
+        
+      </div>
 
-<hr>
-<h3>Exportar Relatórios</h3>
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Exportar Relatórios</p>
+        </div>
+    
 
+        <div class="conta__form">
+            <a href="{% url 'exportar_relatorio' 'pedido' %}" class="subtotal__botao">Exportar Pedidos</a>
+        </div>
 
-<a href="{% url 'exportar_relatorio' 'pedido' %}">Exportar Pedidos</a>
-<a href="{% url 'exportar_relatorio' 'cliente' %}">Exportar Clientes</a>
-<a href="{% url 'exportar_relatorio' 'endereco' %}">Exportar Endereço</a>
+        <div class="conta__form">
+            <a href="{% url 'exportar_relatorio' 'cliente' %}" class="subtotal__botao">Exportar Clientes</a>
+        </div>
+
+        <div class="conta__form">
+            <a href="{% url 'exportar_relatorio' 'endereco' %}" class="subtotal__botao">Exportar Endereço</a>
+        </div>
+        
+      </div>
+
+    </section>
+</main>
+
 
 
 {% endblock %}
