--- a/ecommerce/loja/templates/navbar.html
+++ b/ecommerce/loja/templates/navbar.html
@@ -38,10 +38,10 @@
 
           <!--Categoria Toners-->
           <li class="cabecalho__item-lista">
-            <a class="cabecalho__link" href="{% url 'loja' %}tinteiros">Toners</a>
+            <a class="cabecalho__link" href="{% url 'loja' %}toners">Toners</a>
 
             <div class="cabecalho__expansao-tipos">
-              <a class="cabecalho__imagem-link" href="{% url 'loja' %}tinteiros">
+              <a class="cabecalho__imagem-link" href="{% url 'loja' %}toners">
                 <img src="{% static 'images/menu_sec.png'%}" alt="Imagem do menu secundário" class="cabecalho__imagem"/>
               </a>
 
@@ -56,10 +56,10 @@
 
           <!--Categoria Impressoras-->
           <li class="cabecalho__item-lista">
-            <a class="cabecalho__link" href="{% url 'loja' %}tinteiros">Impressoras</a>
+            <a class="cabecalho__link" href="{% url 'loja' %}impressoras">Impressoras</a>
 
             <div class="cabecalho__expansao-tipos">
-              <a class="cabecalho__imagem-link" href="{% url 'loja' %}tinteiros">
+              <a class="cabecalho__imagem-link" href="{% url 'loja' %}impressoras">
                 <img src="{% static 'images/menu_sec.png'%}" alt="Imagem do menu secundário" class="cabecalho__imagem"/>
               </a>
 
@@ -74,10 +74,10 @@
 
           <!--Categoria Papelaria-->
           <li class="cabecalho__item-lista">
-            <a class="cabecalho__link" href="{% url 'loja' %}tinteiros">Papelaria</a>
+            <a class="cabecalho__link" href="{% url 'loja' %}papelaria">Papelaria</a>
 
             <div class="cabecalho__expansao-tipos">
-              <a class="cabecalho__imagem-link" href="{% url 'loja' %}tinteiros">
+              <a class="cabecalho__imagem-link" href="{% url 'loja' %}papelaria">
                 <img src="{% static 'images/menu_sec.png'%}" alt="Imagem do menu secundário" class="cabecalho__imagem"/>
               </a>
 
@@ -92,10 +92,10 @@
 
           <!--Categoria Gaming-->
           <li class="cabecalho__item-lista">
-            <a class="cabecalho__link" href="{% url 'loja' %}tinteiros">Gaming</a>
+            <a class="cabecalho__link" href="{% url 'loja' %}gaming">Gaming</a>
 
             <div class="cabecalho__expansao-tipos">
-              <a class="cabecalho__imagem-link" href="{% url 'loja' %}tinteiros">
+              <a class="cabecalho__imagem-link" href="{% url 'loja' %}gaming">
                 <img src="{% static 'images/menu_sec.png'%}" alt="Imagem do menu secundário" class="cabecalho__imagem"/>
               </a>
 
@@ -116,10 +116,10 @@
 
           <!--Categoria Ofertas-->
           <li class="cabecalho__item-lista">
-            <a class="cabecalho__link" href="{% url 'loja' %}tinteiros">Ofertas</a>
+            <a class="cabecalho__link" href="{% url 'loja' %}ofertas">Ofertas</a>
 
             <div class="cabecalho__expansao-tipos">
-              <a class="cabecalho__imagem-link" href="{% url 'loja' %}tinteiros">
+              <a class="cabecalho__imagem-link" href="{% url 'loja' %}ofertas">
                 <img src="{% static 'images/menu_sec.png'%}" alt="Imagem do menu secundário" class="cabecalho__imagem"/>
               </a>
 
